# BTCProject

./: .gitignore  .pylintrc  Pipfile  lnd.plist  pyproject.toml  setup.cfg  setup.py
api/api/: asgi.py  settings 2.py  settings.py  urls.py
api/polls/: __init__.py  apps.py  models.py  tests.py  urls.py  views.py
api/polls/migrations/: 0001_initial.py  0002_key_wallet.py
api/tests/wallets/: test_models.py  test_views.py
api/wallets/: admin.py  celery.py  fields.py  forms.py  models.py  urls.py  utils.py  views.py
api/wallets/Templates/: CreateWallet.html  form.html  list.html
api/wallets/Templates/Page/: AccessAccount.html  AccountDelete.html  AccountDeletePrompt.html  EditAccounts.html  details.html
api/wallets/Templates/Registration/: CreateAccount.html  CreateUser.html  PasswordReset.html  login.html  logout.html
api/wallets/Templates/Registration/transaction/: index.html
api/wallets/Templates/wallets/: create.html  details.html  index.html  recieve.html  send.html  simple.html  wallet_list.html
api/wallets/migrations/: 0001_initial.py  0002_auto_20211205_2016.py  0003_page_pagetranslation.py  0004_auto_20220422_0125.py  0005_remove_key_user.py  0006_key_date.py  0007_alter_key_date.py  0008_alter_key_options.py  0009_alter_key_options.py  0010_alter_key_date.py  0011_alter_key_options.py  0012_auto_20220424_1856.py  0013_auto_20220424_1926.py  0014_alter_transaction_created_at.py  0015_transaction_wallet.py
api/wallets/tasks/: __init__.py
