[project]
python = "^3.9"

[build-system]
requires = [
    "setuptools >= 40.9.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = false
use_parentheses = true
line_length = 100

[tool.mypy]
plugins="trio_typing.plugin"

[tool.pytest.ini_options]
trio_mode = true
addopts = "--disable-socket"

DJANGO_SETTINGS_MODULE = "api.settings"
django_find_project = false
python_files = "tests.py test_*.py _tests.py"
filterwarnings = [
    "ignore::django.utils.deprecations.RemovedInDjango40Warning",
    "ignore::django.utils.deprecations.RemovedInDjango41Warning"
]
