[metadata]
name = bitcoin-api
version = 0.1.0
description = Django based bitcoin wallet
license = MIT
classifiers =
    Framework :: Django
    License :: OSI Approved :: MIT
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
author = Copeland Abel
author_email = copeland.abel@s-sm.org

[options]
package_dir = 
    = api
packages = find:
scripts = api/manage.py

[options.packages.find]
where = api
